# aitest

./: .gitignore  README.md  aitest.yaml.example  pyproject.toml
aitest/: cli.py  config.py  device.py  explorer.py  generator.py  healer.py  llm_client.py  notifier.py  runner.py
docs/plans/: 2026-06-29-aitest-design.md  2026-06-29-aitest-implementation.md  2026-06-29-calculator-testplan.md
tests/: conftest.py  test_device.py  test_explorer.py  test_generator.py  test_healer.py  test_llm_client.py  test_notifier.py  test_runner.py
tests/android/: conftest.py  test_navigation.py  test_notifications.py  test_settings.py
tests/apps/: conftest.py  test_com_android_deskclock.py  test_com_miui_calculator.py  test_com_nl_politie_digipass.py
