[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitest"
version = "0.1.0"
description = "AI-powered Android Appium test generator"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "appium-python-client>=4.0",
]

[project.scripts]
aitest = "aitest.cli:app"
