[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitest"
version = "0.1.0"
description = "AI-powered Android Appium test generator"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "appium-python-client>=4.0",
]

[project.scripts]
aitest = "aitest.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a live LLM server (deselect with '-m \"not integration\"')",
    "appium: marks tests that require a live Appium server (deselect with '-m \"not appium\"')",
    "app(package, activity): launches an Android app before running an Appium test",
]
